# creatures

./: .dockerignore  .env.example  .gitignore  API.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  VALIDATION.md  demo-frames.json  docker-compose.yml  index.html  neuron-positions.json  package-lock.json  railway.toml  test_evolution.py  test_god.py  vercel.json
creatures-api/: MUJOCO_LOG.TXT  pyproject.toml
creatures-api/app/: main.py
creatures-api/app/models/: schemas.py
creatures-api/app/routers/: analysis.py  consciousness.py  deep_evolution.py  ecosystem.py  evolution.py  experiments.py  export.py  export_advanced.py  god.py  god_tools.py  history.py  metrics.py  morphology.py  neurons.py  pharmacology.py  ws.py
creatures-api/app/services/: deep_evolution.py  ecosystem_persistence.py  evolution_manager.py  simulation_manager.py
creatures-api/neurevo_data/: neurevo.db
creatures-core/: pyproject.toml
creatures-core/creatures/: __init__.py
creatures-core/creatures/body/: base.py  (+4 more)
creatures-core/tests/: conftest.py  test_analysis.py  test_analytics.py  test_api_integration.py  test_arena.py  test_body.py  test_brain_world.py  test_connectome.py  test_discovery.py  test_ecosystem.py  test_emergent_detector.py  test_evolution.py  test_fly_locomotion.py  test_fly_pipeline.py  test_god_agent.py  test_neural.py  test_neural_organism.py  test_persistence.py  test_pharmacology.py  test_protocol.py  test_reporting.py  test_runner.py  test_sensory_world.py  test_statistics.py  test_stdp.py  test_vectorized.py  test_worlds.py  test_zebrafish.py
(+307 files in other folders)
