[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creatures-api"
version = "0.1.0"
description = "FastAPI server for Creatures virtual organism platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "msgpack>=1.0",
    "pydantic>=2.0",
    "creatures-core",
]
