[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creatures-core"
version = "0.1.0"
description = "Virtual organism platform — connect real connectome data to simulated bodies"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "brian2>=2.5",
    "mujoco>=3.0",
    "h5py>=3.8",
    "pydantic>=2.0",
    "requests>=2.28",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "ipykernel>=6.0",
]
flygym = [
    "flygym>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["creatures*"]
